--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hint_vertices_values">隐藏顶点值</string>
     <string name="show_circle">显示圆点</string>
     <string name="hint_circle">隐藏圆点</string>
-    <string name="x_y_axis_animation">绘制动画</string>
+    <string name="dynamic_data">动态数据</string>
     <string name="save_to_local">保存到本地</string>
     <string name="line_chart_title">近八年来移动班级男女人数走势图</string>
     <string name="bar_chart">柱状图</string>
@@ -15,4 +15,18 @@
     <string name="only_see_girl">只看女孩子</string>
     <string name="no_data">暂无数据</string>
     <string name="all_data">全数据</string>
+    <string name="input_data" />
+    <string name="dialog_title">输入数据</string>
+    <string name="_2011">2011年</string>
+    <string name="boy">男</string>
+    <string name="girl">女</string>
+    <string name="_2012">2012年</string>
+    <string name="_2013">2013年</string>
+    <string name="_2014">2014年</string>
+    <string name="_2015">2015年</string>
+    <string name="_2016">2016年</string>
+    <string name="_2017">2017年</string>
+    <string name="_2018">2018年</string>
+    <string name="ok">确认</string>
+    <string name="cancel">取消</string>
 </resources>
